smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-after-namespace.smithy
// Parse error at line 6, column 5 near `invalid#`: Invalid shape ID: invalid#
$version: "1.0"

namespace smithy.example

use invalid#
